--- a/_units/09.md
+++ b/_units/09.md
@@ -10,8 +10,9 @@ summary: In this unit we have learned about scales and harmony. Harmony is a com
 authors: 
  - Georg Hajdu
  - John MacCallum
-topics: [Scale, Harmony, Microtonality, Inharmonicity, Roughness]
+topics: [Scale, Harmony, Microtonality, Timbre, Inharmonicity, Roughness]
 test_questions:
+ - In what way does quarter-comma meantone temperament relate to 31TET?
  - How does temperament affect harmony and harmonic progression?
  - Describe the differences and similarities between harmony and timbre.
  - What are some ways in which recent composers have sought to create tension and release in music without going back to the tonal system of the past?
@@ -178,7 +179,7 @@ Representatives of this movement, which American composer Harry Partch ("Genesis
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.png" description="Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation" %}
 
-In Just Intonation (JI), we consider the relationships between prime numbers and their powers which can be geometrically arranged as lattices. The term n-limit Just Intonation refers to the prime number n up to which harmonic relationships are considered. In the medieval period,  3-limit JI (intervals derived from fifth relationships) was the norm, while during Renaissance 5-limit JI (adding thirds) became main-stream. In the 20th century, Partch added 7 and 11 for 11-limit JI and composers such as Marc Sabat and Wolfgang von Schweinitz have gone to 23-limit and beyond. They also invented the Extended Helmholtz-Ellis Just Intonation notation capable of capturing JI relationships by means of accidentals.
+In Just Intonation (JI), we consider the relationships between prime numbers and their powers which can be geometrically arranged as lattices. The term n-limit Just Intonation refers to the prime number n up to which harmonic relationships are considered. In the medieval period,  3-limit JI (intervals derived from fifth relationships) was the norm, while during Renaissance 5-limit JI (adding thirds) became main-stream. In the 20th century, Partch added 7 and 11 for 11-limit JI and composers such as Marc Sabat and Wolfgang von Schweinitz have gone up to 23-limit and beyond. They also invented the Extended Helmholtz-Ellis Just Intonation notation capable of capturing JI relationships by means of specific accidentals.
 
 In the 1980s, German musicologist Martin Vogel developed an electronic keyboard system, Mutabor, capable of retuning itself on the fly. As chords are thus always in tune, listeners will notice that the roots of the chords are shifting. Obviously, there is a trade-off between the purity of a chord and its stability in the linear, temporal dimension. Whether or not this is acceptable depends on the musical style. Jazz musician Jacob Collier, for instance, uses a similar on-the-fly tuning system developed at MIT which has created a deep interest in the contemporary Classical  and Jazz communities.
 
@@ -207,11 +208,17 @@ The number of steps in the temperament (t) can be calculated by applying this fo
 In order to avoid unpleasant fifths, the following condition should also be met: 694 cents < (3 * m + n) * s < 710 cents.
 
 Examples:
+
 For 12TET: m = 2 and n = 1
+
 For 17TET: m = 3 and n = 1
+
 For 19TET: m = 3 and n = 2
+
 For 22TET: m = 4 and n = 1
+
 For 31TET: m = 5 and n = 3
+
 For 41TET: m = 7 and n = 3
 
 ### Divisions of Other Intervals 
@@ -261,7 +268,7 @@ Note that depending on the stretch factor, chords may still sound strange and wa
 
 {% include note author="vg" text="We may need a JavaSxcript app here" %}
 
-# Harmony and Timing
+# Harmony and Meter
 In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Consequently, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of a measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
 # Harmony and Gestalt
@@ -273,7 +280,7 @@ Instead, chords ought to be regarded as hierarchical gestalts of gestalts where 
 
 ## Tension and Release
 
-The progression of harmony from consonance through dissonance and back to consonance can be abstracted and seen as a buildup of tension and a release of that tension.  The serialist composers of the post-war period (Boulez, Stockhausen, etc.) gave up the ability to create tension and release through harmonic progression as they abandoned the sonorities and harmonic syntax of the past.  The generation to follow (Grisey, Murail, Saariaho) sought new ways of creating tension and release without returning to the rules of the past.  In her article Timbre and harmony: interpolations of timbral structures, Kaija Saariao proposes a "sound / noise axis" that could replace the tonal system of consonance / dissonance as a way of creating tension and release.  This is hear clearly in the opening seconds of her composition Nymphea for string quartet and electronics—here, the performers alternate between normal playing and noisy extended techniques such as playing on the bridge (listening example 3).  
+The progression of harmony from consonance through dissonance and back to consonance can be abstracted and seen as a buildup of tension and a release of that tension.  The serialist composers of the post-war period (Boulez, Stockhausen, etc.) gave up the ability to create tension and release through harmonic progression as they abandoned the sonorities and harmonic syntax of the past.  The generation to follow (Grisey, Murail, Saariaho) sought new ways of creating tension and release without returning to the rules of the past.  In her article Timbre and harmony: interpolations of timbral structures, Kaija Saariao proposes a "sound / noise axis" that could replace the tonal system of consonance / dissonance as a way of creating tension and release.  This is heared clearly in the opening seconds of her composition Nymphea for string quartet and electronics—here, the performers alternate between normal playing and noisy extended techniques such as playing on the bridge (listening example 3).  
 
  
 <html>
@@ -291,7 +298,7 @@ Listening example 3. The opening minute of Kaija Saariaho's Nymphea for string q
 
 [PAGE FROM SCORE HERE]
 
-In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the composers create a relationship between harmonicity and inharmonicity.  In this case, the concept of harmonicity refers to similarity to the harmonic series.  In Partiels, the opening sonority - a harmonic series derived from the acoustical analysis of a bass trombone - is gradually transformed into an increasingly inharmonic sonority by gradually placing the highest pitches into lower octaves.  In figure xx, the top graph is a sonogram of the opening 2'30" of Partiels and the bottom is a plot of the roughness (see the unit on consonance and dissonance) of the sonority over time created using a modified version of Richard Parncutt's algorithm.  
+In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the composers create a relationship between harmonicity and inharmonicity.  In this case, the concept of harmonicity refers to similarity to the harmonic series. In Partiels, the opening sonority - a harmonic series derived from the acoustical analysis of a bass trombone - is gradually transformed into an increasingly inharmonic sonority by gradually placing the highest pitches into lower octaves.  In figure 9.14, the top graph is a sonogram of the opening 2'30" of Partiels and the bottom is a plot of the roughness (see the unit on consonance and dissonance) of the sonority over time created using a modified version of Richard Parncutt's algorithm.  
 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_partials1-roughness.png" description="The top plot is a sonogram of the first 3'40&quot; of Grisey's Partiels and the bottom plot is roughness against time." %}
@@ -322,7 +329,7 @@ In the following demo, the roughness of a sound file can be calculated in realti
 
 The opening section of Partiels raises an interesting question:  is there a difference between a chord and a timbre?  In this case, it would seem that Grisey constructed a chord out of the elements of a timbre.  But, if a timbre is made up of a series of pitches, how is it different from a chord?  In most western classical music prior to the 20th century, harmony and timbre were considered two separate elements—the orchestration of a sonority could be done in many different ways and was often considered a subjective, surface-level detail.  However, in the 20th century, composers such as Olivier Messiaen began to think of timbre and harmony as inseparable, and it is likely that Grisey would refer to the opening sonority of Partiels as a timbre rather than a chord.  
 
-A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.  In the past, harmonic change and movement to new key areas was largely a discrete event, however, here, by only changing a few notes at a time by placing them in different octaves, Grisey creates a smooth transformation from one sonority to another.  David Wessel has developed a Max (http://www.cycling74.com) object that facilitates gradual timbral transformation.  Here, a timbre is created using a large bank of sinusoidal oscillators and a gradual transformation to a new timbre is done by changing the frequency of one oscillator at a time.  Download the following patch to experiment with different timbral transformations.
+A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.  In the past, harmonic change and movement to new key areas was largely a discrete event, however, here, by only changing a few notes at a time by placing them in different octaves, Grisey creates a smooth transformation from one sonority to another.  David Wessel has developed a [Max](http://www.cycling74.com) object that facilitates gradual timbral transformation.  Here, a timbre is created using a large bank of sinusoidal oscillators and a gradual transformation to a new timbre is done by changing the frequency of one oscillator at a time.  Download the following patch to experiment with different timbral transformations.
 
 
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
@@ -331,11 +338,29 @@ A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.
 
 # References
 
+E. Aldwell, C. Schachter & A. Cadwallader. Harmony and voice leading. Cengage Learning, 2018.
+
+J.M. Barbour. Tuning and temperament: A historical survey. Courier Corporation, 2004.
+
+E. Blackwood. Twelve microtonal etudes: for electronic music media, op. 28. G. Schirmer, 1982.
+
+H. Bohlen: 13 Tonstufen in der Duodezime. Acustica, 39(2):76–86, 1978.
+
+H. Helmholtz. On the sensations of tone. Courier Corporation, 2013.
+
 G. Grisey. Tempus ex machina: a composer’s reflections on musical time. Contemporary Music Review, 2(1):239–276, 1987.
+
+N.-L. Müller, K. Orlandatou and G. Hajdu. "Starting Over – Chances Afforded by a New Scale," in: 1001 Microtones, M. Stahnke and S. Safari (Eds.). Von Bockel, 127–172, 2014.
 
 R. Parncutt. Harmony: A Psychoacoustical Approach. Springer-Verlag, Berlin, 1989.
 
+H. Partch. Genesis Of A Music: An Account Of A Creative Work, Its Roots, And Its Fulfillments, Second Edition, Da Capo Press, 1979.
+
 K. Saariaho. Timbre and harmony: Interpolations of timbral structures. Contemporary Music Review, 2(1):93–134, 1987.
+
+M. Sabat & W. von Schweinitz. The Extended Helmholtz-Ellis JI Pitch Notation. Plainsound Music Edition, 2004.
+
+W.A. Sethares. Tuning, timbre, spectrum, scale. Springer Science & Business Media, 2005.
 
 D. Wessel.  Timbre space as a musical control structure.  xenakis.ircam.fr/articles/textes/Wessel78a/, 1978.
 
