--- a/_units/09.md
+++ b/_units/09.md
@@ -240,10 +240,10 @@ These intervals are also included in the spectrum of the clarinet, which is one 
 As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a _macrotonal_ scale, implying that its step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller fractions. Two microtonal scales stand out: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing the BP step into 5. Serendipitously, the resulting step size (1902 / 65 = 29.262 cents) is nearly identical to 41TET (1200 / 41 = 29.268 cents). We can therefore consider the Bohlen-Pierce a subset of 41TET. This fact has far-reaching implications which have barely been exploited by composers and theorists.
 
 ## Other Scales
-Another classes of tunings cannot be classified into neither group. It includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional Gamelan music. According to William Sethares (see below) these instruments are tuned in such way that sonorities formed from the inharmonic sounds of the Gamelan orchestra strive for low sensory dissonance. To smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly different pitch which creates vibrato-like beatings.
-(The other scale commonly used in gamelan music, Slendro, is characterized by a quasi-equidistant 5-tone scale.)
+Another classes of tunings cannot be classified into neither group. It includes the Indonesian pelog (used in gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional gamelan music. According to William Sethares (see below) these instruments are tuned in such way that sonorities formed from the inharmonic sounds of the Gamelan orchestra strive for low sensory dissonance. To smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly different pitch which creates vibrato-like beatings. Also note that each Gamelan orchestra has its slightly specific tuning which is due to differences in the manufacturing of the instruments. Therefore, any frequencies given for the pelog scale are either orchestra-specific or abstractions of real tunings.
+(The other scale commonly used in gamelan music, slendro, is characterized by a quasi-equidistant 5-tone scale.)
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for a Gamelan instrument" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for the pelog scale" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
 
