--- a/_units/09.md
+++ b/_units/09.md
@@ -225,19 +225,23 @@ For 41TET: m = 7 and n = 3
 The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. Instead of the octave, other  intervals can be used a frame for a repeating scale structure. Intervals that have been considered are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale. In Elektronische Studie II, Karlheinz Stockhausen uses a scale dividing the just 5/1 interval into 25 steps.
 
 #### Bohlen-Pierce Scale
-The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into thirteen steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice).
-
-These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html. Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit just and equal tempered versions of the chromatic scale match each other. 
+The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice). 
+These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit just and equal tempered versions of the chromatic scale match each other. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
 
+In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of specific Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html).
+In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony and counterpoint. 
+
+A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focussed on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour. 
+
 {% include note author="vg" text="Include Example: Burning Petrol" %}
 
 
-##### Bohlen-Pierce Microtonality
-As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a _macrotonal_ scale, implying that its step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller fractions. Two microtonal scales stand out: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing the BP step into 5. Serendipitously, the resulting step size (1902 / 65 = 29.262 cents) is nearly identical to 41TET (1200 / 41 = 29.268 cents). We can therefore consider the Bohlen-Pierce a subset of 41TET. This fact has far-reaching implications which have barely been exploited by composers and theorists.
+#### Bohlen-Pierce Microtonality
+As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a _macrotonal_ scale, implying that its step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller fractions. Two microtonal scales stand out: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing the BP step into 5. Serendipitously, the resulting step size (1902 / (13 * 5) = 29.262 cents) is nearly identical to 41TET (1200 / 41 = 29.268 cents). We can therefore consider the Bohlen-Pierce a subset of 41TET. This fact has far-reaching implications which have barely been exploited by composers and theorists.
 
 ## Other Scales
 Another classes of tunings cannot be classified into neither group. It includes the Indonesian pelog (used in gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional gamelan music. According to William Sethares (see below) these instruments are tuned in such way that sonorities formed from the inharmonic sounds of the Gamelan orchestra strive for low sensory dissonance. To smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly different pitch which creates vibrato-like beatings. Also note that each Gamelan orchestra has its slightly specific tuning which is due to differences in the manufacturing of the instruments. Therefore, any frequencies given for the pelog scale are either orchestra-specific or abstractions of real tunings.
