--- a/_units/09.md
+++ b/_units/09.md
@@ -225,20 +225,28 @@ For 41TET: m = 7 and n = 3
 The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. Instead of the octave, other  intervals can be used a frame for a repeating scale structure. Intervals that have been considered are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale. In Elektronische Studie II, Karlheinz Stockhausen uses a scale dividing the just 5/1 interval into 25 steps.
 
 #### Bohlen-Pierce Scale
-The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice). 
-These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit just and equal tempered versions of the chromatic scale match each other. 
-
-{% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
+The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice). Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit just and equal tempered versions of the chromatic scale match each other. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
 
-In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of specific Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html).
-In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony and counterpoint. 
+Odd integer frequency ratios arise in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of particular Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html), with the first clarinet being finished in 2007. In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony, counterpoint and ear training (see figure 9.10 for different representations of the Bohlen-Pierce scale). MUTOR co-author Psyche Loui, in her Ph.D. work, has asked the question whether or not humans can rapidly learn grammatical structure in a new musical scale. She used the Bohlen-Pierce scale as a point of departure and had, from the perpective of a cognitive psychologist, envouraging results which were in line with the outcomes of the empirical research conducted at the HfMT. 
+
+{% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
 
 A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focussed on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour. 
 
-{% include note author="vg" text="Include Example: Burning Petrol" %}
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_Scriabin_Hajdu_ Burnig Petrol.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html> 
 
+Listening example ?. Burning Petrol, an arrangement of the piano poem Vers la flamme by Alexander Scriabin for Bohlen-Pierce ensemble.
 
 #### Bohlen-Pierce Microtonality
 As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a _macrotonal_ scale, implying that its step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller fractions. Two microtonal scales stand out: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing the BP step into 5. Serendipitously, the resulting step size (1902 / (13 * 5) = 29.262 cents) is nearly identical to 41TET (1200 / 41 = 29.268 cents). We can therefore consider the Bohlen-Pierce a subset of 41TET. This fact has far-reaching implications which have barely been exploited by composers and theorists.
@@ -268,7 +276,7 @@ There are four scenarios to be considered:
 1. The scale is stretched: the chord progression sounds out of tune
 1. Both spectra and scale are stretched: the chords and their progression sound smooth. 
 
-Note that depending on the stretch factor, chords may still sound strange and wanting. This is explained by the fact that, due to the brain's ability to infer a virtual fundamental (f<sub>0</sub>), partials forming a harmonic spectrum (and - to lesser degree - tones forming a chord) will cause the sensation of a fundamental even though it may be absent from the spectrum. With stretched spectra, this virtual fundamental may not form a harmonic relationship with the members of chord, adding to its inharmonicity.
+Note that depending on the stretch factor, chords may still sound strange and wanting. This is explained by the fact that, due to the brain's ability to infer a virtual fundamental (f<sub>0</sub>), partials forming a harmonic spectrum (and - to lesser degree - tones forming a chord) will cause the sensation of a fundamental even though it may be absent from the spectrum. With stretched spectra, this virtual fundamental may not form a harmonic relationship with the members of the chord, adding to its inharmonicity.
 
 {% include note author="vg" text="We may need a JavaSxcript app here" %}
 
@@ -285,7 +293,6 @@ Instead, chords ought to be regarded as hierarchical gestalts of gestalts where 
 ## Tension and Release
 
 The progression of harmony from consonance through dissonance and back to consonance can be abstracted and seen as a buildup of tension and a release of that tension.  The serialist composers of the post-war period (Boulez, Stockhausen, etc.) gave up the ability to create tension and release through harmonic progression as they abandoned the sonorities and harmonic syntax of the past.  The generation to follow (Grisey, Murail, Saariaho) sought new ways of creating tension and release without returning to the rules of the past.  In her article Timbre and harmony: interpolations of timbral structures, Kaija Saariao proposes a "sound / noise axis" that could replace the tonal system of consonance / dissonance as a way of creating tension and release.  This is heared clearly in the opening seconds of her composition Nymphea for string quartet and electronics—here, the performers alternate between normal playing and noisy extended techniques such as playing on the bridge (listening example 3).  
-
  
 <html>
   <head>
@@ -353,6 +360,8 @@ H. Bohlen: 13 Tonstufen in der Duodezime. Acustica, 39(2):76–86, 1978.
 H. Helmholtz. On the sensations of tone. Courier Corporation, 2013.
 
 G. Grisey. Tempus ex machina: a composer’s reflections on musical time. Contemporary Music Review, 2(1):239–276, 1987.
+
+P. Loui, D.L. Wessel, and C.L. Hudson Kam. Humans rapidly learn grammatical structure in a new musical scale. Music Perception 27(5):377-388, 2010.
 
 N.-L. Müller, K. Orlandatou and G. Hajdu. "Starting Over – Chances Afforded by a New Scale," in: 1001 Microtones, M. Stahnke and S. Safari (Eds.). Von Bockel, 127–172, 2014.
 
