--- a/_units/09.md
+++ b/_units/09.md
@@ -221,19 +221,19 @@ For 31TET: m = 5 and n = 3
 
 For 41TET: m = 7 and n = 3
 
-### Divisions of Other Intervals 
+### Divisions of Intervals Other than the Octave
 The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. Instead of the octave, other  intervals can be used a frame for a repeating scale structure. Intervals that have been considered are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale. In Elektronische Studie II, Karlheinz Stockhausen uses a scale dividing the just 5/1 interval into 25 steps.
 
 #### Bohlen-Pierce Scale
-The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice). Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit just and equal tempered versions of the chromatic scale match each other. 
+The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (a 3,5,7 pitch lattice). Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit (2,3,5) just and equal tempered versions of the chromatic scale match each other. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
 
-Odd integer frequency ratios arise in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of particular Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html), with the first clarinet being finished in 2007. In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony, counterpoint and ear training (see figure 9.10 for different representations of the Bohlen-Pierce scale). MUTOR co-author Psyche Loui, in her Ph.D. work, has asked the question whether or not humans can rapidly learn grammatical structure in a new musical scale. She used the Bohlen-Pierce scale as a point of departure and had, from the perpective of a cognitive psychologist, envouraging results which were in line with the outcomes of the empirical research conducted at the HfMT. 
+Odd integer frequency ratios arise in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of particular Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html), with the first clarinet being finished in 2007. In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony, counterpoint and ear training (see figure 9.10 for different representations of the Bohlen-Pierce scale). MUTOR co-author Psyche Loui, in her Ph.D. work, has asked the question whether or not humans can rapidly learn grammatical structure in a new musical scale. She used the Bohlen-Pierce scale as a point of departure and had, from the perpective of a cognitive psychologist, encouraging results which were in line with the outcomes of the empirical research conducted at the HfMT. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
 
-A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focussed on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour. 
+A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focusses on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour. 
 
 <html>
   <head>
@@ -284,9 +284,7 @@ Note that depending on the stretch factor, chords may still sound strange and wa
 In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Consequently, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of a measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
 # Harmony and Gestalt
-Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it a representation of the 10/12/15 relationship while others argue that it actually stems from the subharmonic series, the inversion of the harmonic series - with the same relationship of the ordinal numbers 4/5/6 as the major chord. While chords taken from the subharmonic series may still be considered stable, they often lack a fundamental quality related to the perception of a virtual fundamental and, therefore, sound less resonant.
-
-Instead, chords ought to be regarded as hierarchical gestalts of gestalts where aspects such as virtual fundamental, voicing, sensory dissonance and temporal succession (context) come into play.
+Intervals and chords are often related to the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it a representation of the 10/12/15 relationship while others argue that it actually stems from the subharmonic series, the inversion of the harmonic series - with the same relationship of the ordinal numbers 4/5/6 as the major chord. While chords taken from the subharmonic series may still be considered stable, they often lack a fundamental quality related to the perception of a virtual fundamental and, therefore, sound less resonant. In classical and contemporary avantgarde music sonorities are too complex to be derived from either the harmonic or subharmonic series. Instead, they ought to be regarded as hierarchical gestalts of gestalts where aspects such as virtual fundamental, voicing, sensory dissonance, syntax and context come into play.
 
 # Harmony in the 20th/21st Centuries
 
